<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.first_screen.FirstScreenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/infoo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/first_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autoLink="web"
            android:hint="@string/photo"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/secondName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/second_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/education"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/_1_2_3_4"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B9BEB9">

            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/company"
                android:textColor="@color/black"
                android:textSize="23sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/info"
                tools:listitem="@layout/view_company" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>